--- a/app/views/materials/show.html.slim
+++ b/app/views/materials/show.html.slim
@@ -1,2 +1,50 @@
-h1 Materials#show
-p Find me in app/views/materials/show.html.slim
+h3 詳細
+
+.nav.justify-content-end
+  = link_to '一覧', materials_path, class: 'nav-link'
+table.table.table-hover
+  tbody
+    tr
+      th = Material.human_attribute_name(:id)
+      td = @material.id
+    tr
+      th = Material.human_attribute_name(:name)
+      td = @material.name
+    tr
+      th = Material.human_attribute_name(:sio2)
+      td = @material.sio2
+    tr
+      th = Material.human_attribute_name(:tio2)
+      td = @material.tio2
+    tr
+      th = Material.human_attribute_name(:al2o3)
+      td = @material.al2o3
+    tr
+      th = Material.human_attribute_name(:fe2o3)
+      td = @material.fe2o3
+    tr
+      th = Material.human_attribute_name(:cao)
+      td = @material.cao
+    tr
+      th = Material.human_attribute_name(:mgo)
+      td = @material.mgo
+    tr
+      th = Material.human_attribute_name(:k2o)
+      td = @material.k2o
+    tr
+      th = Material.human_attribute_name(:na2o)
+      td = @material.na2o
+    / tr
+    /   th= Material.human_attribute_name(:description)
+    /   td= raw Rinku.auto_link(simple_format(h(@material.description), (), sanitize: false, wrapper_tag: "div"))
+    tr
+      th = Material.human_attribute_name(:created_at)
+      td = @material.created_at
+    tr
+      th = Material.human_attribute_name(:updated_at)
+      td = @material.updated_at
+
+= link_to '編集', edit_material_path, class: 'btn btn-primary mr-3'
+= link_to '削除', @material, method: :delete,
+  data: { confirm: "原料「#{@material.name}」を削除します。よろしいですか？" },
+  class: 'btn btn-danger'
