fix: 分子名の変数を送る

--- a/app/views/materials/new.html.slim
+++ b/app/views/materials/new.html.slim
@@ -3,4 +3,5 @@ h3 原料の新規登録
 .nav.justify-content-end
   = link_to '原料成分表一覧', materials_path, class: 'badge badge-secondary'
 
-= render partial: 'form', locals: { material: @material }
+= render partial: 'form',
+  locals: { material: @material, molecular_names: @molecular_names }
