--- a/app/views/materials/index.html.slim
+++ b/app/views/materials/index.html.slim
@@ -9,20 +9,32 @@ table.table.table-hover
       th = Material.human_attribute_name(:id)
       th = Material.human_attribute_name(:name)
       th = Material.human_attribute_name(:sio2)
-      th = Material.human_attribute_name(:sio2)
-      th = Material.human_attribute_name(:sio2)
+      th = Material.human_attribute_name(:tio2)
+      th = Material.human_attribute_name(:al2o3)
+      th = Material.human_attribute_name(:fe2o3)
+      th = Material.human_attribute_name(:cao)
+      th = Material.human_attribute_name(:mgo)
+      th = Material.human_attribute_name(:k2o)
+      th = Material.human_attribute_name(:na2o)
       th = Material.human_attribute_name(:created_at)
+      th
   tbody
     - @materials.each do |material|
       tr
         td = material.id
-        td = link_to material.name, material
+        td = link_to material.name, material_path(material.id)
         td = material.sio2
-        td = material.sio2
-        td = material.sio2
+        td = material.tio2
+        td = material.al2o3
+        td = material.fe2o3
+        td = material.cao
+        td = material.mgo
+        td = material.k2o
+        td = material.na2o
         td = material.created_at
-          / = link_to '編集', edit_material_path(material),
-          /   class: 'btn btn-primary mr-3'
-          / = link_to '削除', material, method: :delete,
-          /   data: { confirm: "タスク「#{material.name}」を削除します。よろしいですか?" },
-          /   class: 'btn btn-danger'
+        td
+          = link_to '編集', edit_material_path(material),
+            class: 'btn btn-primary mr-3'
+          = link_to '削除', material, method: :delete,
+            data: { confirm: "原料「#{material.name}」を削除します。よろしいですか?" },
+            class: 'btn btn-danger'
