--- a/app/views/materials/edit.html.slim
+++ b/app/views/materials/edit.html.slim
@@ -1,2 +1,8 @@
-h1 Materials#edit
-p Find me in app/views/materials/edit.html.slim
+h3 原料データの編集
+
+.nav.justify-content-end
+  = link_to '原料成分表一覧', materials_path, class: 'badge badge-secondary'
+
+= render partial: 'form',
+  locals: { material: @material, molecular_names: @molecular_names }
+
