--- a/app/views/materials/index.html.slim
+++ b/app/views/materials/index.html.slim
@@ -1,8 +1,14 @@
-h3 原料分析表
+h3 原料分析値表
 
 = link_to '新規登録', new_material_path, class: 'btn btn-primary'
 
 .mb-3
+ul.nav.nav-tabs
+  li.nav-item
+    = link_to '原料分析値', materials_path, class: 'nav-link active'
+  li.nav-item
+    = link_to '原料mol値', molnum_index_path, class: 'nav-link active'
+
 table.table.table-hover
   thead.thead.thead-dark
     tr
