add: ゴシック書体の候補

--- a/app/assets/stylesheets/_setting.scss
+++ b/app/assets/stylesheets/_setting.scss
@@ -8,9 +8,12 @@ $width-main: 800px; // メインエリアの幅
 $width-side: 360px; // サイドバーの幅
 
 // フォント関係の設定 ------------------------
-$font-base: Segoe UI,
-
-// "Kokoro",
+$font-base: 'Haas Grot Text R Web',
+'Helvetica Neue',
+Helvetica,
+Arial,
+sans-serif,
+Segoe UI // "Kokoro",
 // Sans-Serif,
 ;
 $font-serif: 'FOT-筑紫Aオールド明朝 Pr6N M',
