--- a/app/assets/stylesheets/_module.scss
+++ b/app/assets/stylesheets/_module.scss
@@ -1,3 +1,17 @@
+// 背景の層を作る
+.bg-layer {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(190, 190, 190, 0.75);
+  position: relative;
+}
+
+a {
+  color: rgb(121,
+86,
+44);
+}
+
 // フォームのスタイル
 #material_name {
   width: 50%;
