fix:リファクタリングのための変数名変更

--- a/app/views/materials/new.html.slim
+++ b/app/views/materials/new.html.slim
@@ -4,4 +4,4 @@ h3 原料の新規登録
   = link_to '原料成分表一覧', materials_path, class: 'badge badge-secondary'
 
 = render partial: 'form',
-  locals: { material: @material, molecular_names: @molecular_names }
+  locals: { material: @material, molar_masses: @molar_masses }
