fix: 変数名の変更、index側はリファクタリングにより簡略 - コントローラー側の変更により変数を統一 - スタイルクラスの変更

--- a/app/views/materials/index.html.slim
+++ b/app/views/materials/index.html.slim
@@ -1,46 +1,46 @@
 h3 原料分析値表
 
-= link_to '新規登録', new_material_path, class: 'btn btn-primary'
+= link_to '新規登録', new_material_path, class: 'btn distinct cleardeco'
 
 .mb-3
 ul.nav.nav-tabs
   li.nav-item
-    = link_to '原料分析値', materials_path, class: 'nav-link active'
+    = link_to '原料分析値', materials_path, class: 'nav-link s-bump sss-depressed'
   li.nav-item
-    = link_to '原料mol値', molnum_index_path, class: 'nav-link active'
+    = link_to '原料mol値', molnum_index_path, class: 'nav-link s-bump'
 
-table.table.table-hover
+/ table.table.table-hover
+table.l-bump.ss-depressed
   thead.thead.thead-dark
     tr
-      th = Material.human_attribute_name(:id)
+      / th = Material.human_attribute_name(:id)
       th = Material.human_attribute_name(:name)
-      th = Material.human_attribute_name(:sio2)
-      th = Material.human_attribute_name(:tio2)
-      th = Material.human_attribute_name(:al2o3)
-      th = Material.human_attribute_name(:fe2o3)
-      th = Material.human_attribute_name(:cao)
-      th = Material.human_attribute_name(:mgo)
-      th = Material.human_attribute_name(:k2o)
-      th = Material.human_attribute_name(:na2o)
-      th = Material.human_attribute_name(:created_at)
+      - @molar_masses.keys.each do |molecular_name|
+        th = Material.human_attribute_name(:"#{molecular_name}")
+      / th = Material.human_attribute_name(:created_at)
       th
   tbody
     - @materials.each do |material|
       tr
-        td = material.id
+        / td = material.id
         td = link_to material.name, material_path(material.id)
-        td = material.sio2
-        td = material.tio2
-        td = material.al2o3
-        td = material.fe2o3
-        td = material.cao
-        td = material.mgo
-        td = material.k2o
-        td = material.na2o
-        td = material.created_at
+        - @molar_masses.keys.each do |molecular_name|
+          td = material.public_send(molecular_name)
+        / td = material.sio2
+        / td = material.tio2
+        / td = material.al2o3
+        / td = material.fe2o3
+        / td = material.cao
+        / td = material.mgo
+        / td = material.k2o
+        / td = material.na2o
+        / td = material.created_at
         td
           = link_to '編集', edit_material_path(material),
-            class: 'btn btn-primary mr-3'
+            class: 'btn'
           = link_to '削除', material, method: :delete,
             data: { confirm: "原料「#{material.name}」を削除します。よろしいですか?" },
-            class: 'btn btn-danger'
+            class: 'btn'
+  tfoot
+    tr
+      td colspan="4"
