--- a/app/assets/stylesheets/materials.scss
+++ b/app/assets/stylesheets/materials.scss
@@ -1,99 +1,119 @@
 // Place all the styles related to the materials controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
-@import "setting", "module";
+@import "setting", "module", "rebootstrap", "newmorphism";
 
-body {
-  // レイアウト系
-  display: flex;
-  flex-direction: column;
+// htmlの構造順に記述、装飾的な内容はパーシャルファイルで
+html {
   height: 100%;
 
-  color: rgb(200, 200, 200);
-
-  background: {
-    // color: call($name: , $args: …);
-    color: rgb(31, 34, 27);
-    image: url("/images/glaze_fav背景.png");
-    attachment: fixed;
-    size: cover;
-  }
-
   // テキスト系
+  color: $color-font;
+
   font: {
-    family: $font-base;
+    family: $font-sans-serif;
     size: 1rem;
   }
 
-  header {
-    // background-color: rgba(31, 34, 27, 0.5);
-    width: 100%;
-    // height: 4rem;
+  body {
+    // レイアウト系
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    position: relative;
+    width: 100vw;
+    height: 100%;
 
-    h2 {
-      width: 50%;
 
-      padding: {
-        left: 1rem;
-      }
-
-      font: {
-        // size: 3rem;
-        // weight: bolder;
-      }
-
+    background: {
+      // color: call($name: , $args: …);
+      color: rgb(31, 34, 27);
+      image: url("/images/glaze_fav背景.png");
+      attachment: fixed;
+      size: cover;
     }
 
-    nav {
-      width: 50%;
-      display: flex;
-      justify-content: flex-end;
+    // 背景の層を作る
+    .bg-layer {
+      width: 100%;
+      height: 100%;
+      background-color: $color-back;
+      position: relative;
 
-      ul {
-        list-style: none;
-
-        height: 60%;
+      header {
+        // background-color: rgba(31, 34, 27, 0.5);
+        width: 100%;
+        // height: 4rem;
         display: flex;
         flex-direction: row;
-        justify-content: flex-end;
-        position: relative;
-        top: 40%;
 
-        cursor: pointer;
+        h1 {
+          width: 50%;
 
-        li {
-          // margin: 0 16px;
-          padding: 0px 10px;
+          padding: {
+            left: 1rem;
+          }
+
+          font: {
+            // size: 3rem;
+            // weight: bolder;
+          }
+        }
+
+        nav {
+          width: 50%;
+          display: flex;
+          flex-direction: inherit;
+          justify-content: flex-end;
+          position: relative;
+
+          ul {
+            list-style: none;
+
+            height: 60%;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-end;
+            position: absolute;
+            bottom: 0;
+
+            cursor: pointer;
+
+            li {
+              padding: 0px 10px;
+            }
+          }
         }
       }
-    }
 
-  }
+      main {
+        display: flex;
+        flex-direction: column;
+        padding: 2rem;
+        margin-bottom: 2rem;
+        // margin: 0 2rem 2rem 2rem;
+        //       flex: 1;
+        // min-height: 50vh;
+      }
 
-  main {
-    padding: 1rem;
-    //       margin: 0 auto;
-    //       flex: 1;
-    // min-height: 50vh;
-  }
+      footer {
+        background-color: rgba(31, 34, 27, 0.9);
+        //     writing-mode: vertical-rl;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        height: 2rem;
 
-  footer {
-    background-color: rgba(31, 34, 27, 0.7);
-    //     writing-mode: vertical-rl;
-    position: absolute;
-    bottom: 0px;
-    width: 100%;
+        //     // height: 200px;
+        //     // align-self: flex-end;
+        // position: absolute; // left: 10px;
+        // bottom: 0px;
 
-    //     // height: 200px;
-    //     // align-self: flex-end;
-    // position: absolute; // left: 10px;
-    // bottom: 0px;
+        .fa-instagram {
+          font-size: 20px;
+          color: deeppink;
+        }
+      }
 
-    .fa-instagram {
-      font-size: 20px;
-      color: deeppink;
     }
   }
 }
