--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,102 +13,6 @@
  *= require_tree .
  *= require_self
  */
-@import "bootstrap";
+// @import "bootstrap";
+@import "reset";
 @import "materials";
-// * {
-//   margin: 0;
-//   padding: 0;
-// }
-
-// body {
-//   // レイアウト系
-//   display: flex;
-//   flex-direction: column;
-//   height: 100vh;
-
-//   color: rgb(200, 200, 200);
-
-//   background: {
-//     // color: call($name: , $args: …);
-//     color: rgb(31, 34, 27);
-//     image: url("/images/glaze_fav背景.png");
-//     attachment: fixed;
-//     size: cover;
-//   }
-
-//   // テキスト系
-//   font: {
-//     family: $font-serif;
-//     size: 1rem;
-//   }
-
-//   header {
-//     background-color: rgba(31, 34, 27, 0.5);
-//     width: 100%;
-//     // height: 4rem;
-//     display: flex;
-//     flex-direction: row;
-
-//     h2 {
-//       width: 50%;
-
-//       padding: {
-//         left: 1rem;
-//       }
-
-//       font: {
-//         // size: 3rem;
-//         // weight: bolder;
-//       }
-
-//     }
-
-//     nav {
-//       width: 50%;
-//       display: flex;
-//       justify-content: flex-end;
-
-//       ul {
-//         list-style: none;
-
-//         height: 60%;
-//         display: flex;
-//         flex-direction: row;
-//         justify-content: flex-end;
-//         position: relative;
-//         top: 40%;
-
-//         cursor: pointer;
-
-//         li {
-//           // margin: 0 16px;
-//           padding: 0px 10px;
-//         }
-//       }
-//     }
-
-//   }
-
-//   main {
-//     padding: 1rem;
-//     //       margin: 0 auto;
-//     //       flex: 1;
-//     // min-height: 50vh;
-//   }
-
-//   footer {
-//     background-color: rgba(31, 34, 27, 0.7);
-//     //     writing-mode: vertical-rl;
-//     width: 100%;
-
-//     //     // height: 200px;
-//     //     // align-self: flex-end;
-//     // position: absolute; // left: 10px;
-//     // bottom: 0px;
-
-//     .fa-instagram {
-//       font-size: 20px;
-//       color: deeppink;
-//     }
-//   }
-// }
