--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,5 +14,5 @@
  *= require_self
  */
 // @import "bootstrap";
-@import "reset";
-@import "materials";
+@import "Foundation/reset", "Foundation/structure";
+// @import "materials";
