--- a/app/views/materials/index.html.slim
+++ b/app/views/materials/index.html.slim
@@ -1,29 +1,31 @@
-= link_to '新規登録', new_material_path, class: 'btn distinct'
+= link_to '新規登録', new_material_path, class: 'main__btn'
 
-/ .mb-3
-ul.nav.nav-tabs
-  li.nav-item.sss-bump.sss-depressed
-    = link_to '原料分析値', materials_path, class: 'nav-link'
-  li.nav-item.sss-bump
-    = link_to '原料mol値', molnum_index_path, class: 'nav-link'
+ul.main__nav
+  li.__item.sss-depressed
+    = link_to '原料分析値', materials_path, class: '__link'
+  li.__item
+    = link_to '原料mol値', molnum_index_path, class: '__link'
 
 / table.table.table-hover
-table.l-bump.ss-depressed
-  thead
-    tr
+table.main__table
+  thead.__thead
+    tr.__tr
       / th = Material.human_attribute_name(:id)
-      th.sss-depressed = Material.human_attribute_name(:name)
+      th.__th = Material.human_attribute_name(:name)
       - @molar_masses.keys.each do |molecular_name|
-        th.th.sss-depressed = Material.human_attribute_name(:"#{molecular_name}")
+        th.__th = Material.human_attribute_name(:"#{molecular_name}")
       / th = Material.human_attribute_name(:created_at)
-      th.last-cell.sss-depressed
-  tbody
+      th.__th
+  tbody.__tbody
     - @materials.each do |material|
-      tr
+      tr.__tr
         / td = material.id
-        td.sss-depressed = link_to material.name, material_path(material.id)
+        td.__td
+          = link_to material.name, material_path(material.id),
+            class: '__link'
+
         - @molar_masses.keys.each do |molecular_name|
-          td.sss-depressed = material.public_send(molecular_name)
+          td.__td = material.public_send(molecular_name)
         / td = material.sio2
         / td = material.tio2
         / td = material.al2o3
@@ -33,12 +35,12 @@ table.l-bump.ss-depressed
         / td = material.k2o
         / td = material.na2o
         / td = material.created_at
-        td.last-cell
+        td.__td
           = link_to '編集', edit_material_path(material),
-            class: 'btn sss-bump'
+            class: 'main__td_btn'
           = link_to '削除', material, method: :delete,
             data: { confirm: "原料「#{material.name}」を削除します。よろしいですか?" },
-            class: 'btn sss-bump'
+            class: 'main__td_btn'
   / tfoot
   /   tr
   /     td colspan="4"
