--- a/app/assets/stylesheets/Setting/_config.scss
+++ b/app/assets/stylesheets/Setting/_config.scss
@@ -18,8 +18,7 @@ Arial,
 sans-serif,
 Segoe UI,
 // "Kokoro",
-Sans-Serif,
-;
+Sans-Serif;
 
 // 明朝体
 $font-serif: 'FOT-筑紫Aオールド明朝 Pr6N M',
@@ -40,89 +39,44 @@ $font-monospace: monospace;
 // スタイル関連の設定
 // ========================================
 // シャドウ、ライトの長さ/強さ/ぼかし ---------------------
-$sss-shadow: 2px;
-$ss-shadow: 5px;
-$s-shadow: 10px;
-$m-shadow: 20px;
-$l-shadow: 30px;
+$shadowlength: (sss: 2px,
+  ss: 5px,
+  s: 10px,
+  m: 20px,
+  l: 30px);
 
-$sss-light: -1 * $sss-shadow;
-$ss-light: -1 * $ss-shadow;
-$s-light: -1 * $s-shadow;
-$m-light: -1 * $m-shadow;
-$l-light: -1 * $l-shadow;
-
-$sss-blur: 2 * $sss-shadow;
-$ss-blur: 2 * $ss-shadow;
-$s-blur: 2 * $s-shadow;
-$m-blur: 2 * $m-shadow;
-$l-blur: 2 * $l-shadow;
-
-// bump と depressed のためのシャドウ
-$sss-shadowset: $sss-shadow $sss-shadow $sss-blur;
-$ss-shadowset: $ss-shadow $ss-shadow $ss-blur;
-$s-shadowset: $s-shadow $s-shadow $s-blur;
-$m-shadowset: $m-shadow $m-shadow $m-blur;
-$l-shadowset: $l-shadow $l-shadow $l-blur;
-
-$sss-lightset: $sss-light $sss-light $sss-blur;
-$ss-lightset: $ss-light $ss-light $ss-blur;
-$s-lightset: $s-light $s-light $s-blur;
-$m-lightset: $m-light $m-light $m-blur;
-$l-lightset: $l-light $l-light $l-blur;
-
-// text-shadow用のセット(ぼかしを強めにしてる)
-$sss-textshadowset: $sss-shadow $sss-shadow ($sss-blur * 10);
-$ss-textshadowset: $ss-shadow $ss-shadow ($ss-blur * 10);
-$s-textshadowset: $s-shadow $s-shadow ($s-blur * 10);
-$m-textshadowset: $m-shadow $m-shadow ($m-blur * 10);
-$l-textshadowset: $l-shadow $l-shadow ($l-blur * 10);
-
-$sss-textlightset: $sss-light $sss-light ($sss-blur * 10);
-$ss-textlightset: $ss-light $ss-light ($ss-blur * 10);
-$s-textlightset: $s-light $s-light ($s-blur * 10);
-$m-textlightset: $m-light $m-light ($m-blur * 10);
-$l-textlightset: $l-light $l-light ($l-blur * 10);
-
-
-// distinctクラスのための外側のシャドウ
-$sss-4d-shadowset: $sss-shadow $sss-shadow $ss-blur;
-$ss-4d-shadowset: $ss-shadow $ss-shadow $ss-blur;
-$s-4d-shadowset: $s-shadow $s-shadow $s-blur;
-$m-4d-shadowset: $m-shadow $m-shadow $m-blur;
-$l-4d-shadowset: $l-shadow $l-shadow $l-blur;
-
-$sss-4d-lightset: ($sss-light / 2) ($sss-light / 2) $ss-blur;
-$ss-4d-lightset: $ss-light $ss-light $ss-blur;
-$s-4d-lightset: $s-light $s-light $s-blur;
-$m-4d-lightset: $m-light $m-light $m-blur;
-$l-4d-lightset: $l-light $l-light $l-blur;
 
 // ========================================
 // サイズ関連の設定
 // ========================================
 $header-height: 3rem;
-$footer-height: 2rem;
+$footer-height: 3rem;
+
+$table-corners: 8px;
+$table-framewidth: 2px;
+
+$innercell-corner: $table-corners - $table-framewidth;
+
 
 // =================================================
 // 色関係の設定
 // =================================================
 // サイトカラー
 // 背景色
-// $color-back: rgba(59, 56, 35, 0.8);
-$color-back: rgba(66, 66, 56, 0.9);
+$color-back: rgba(39, 39, 30, 0.9);
 $color-back-lighten: lighten($color-back, 10%);
 $color-back-darken: darken($color-back, 8%);
 
-$color-main: #0062b2;
-$color-sub: #def1fa;
+// $color-main: #0062b2;// $color-sub: #def1fa;
 // フォントカラー
-$color-font: rgb(245, 211, 170);
+$color-font: rgba(245, 211, 170, 0.95);
 $color-font-shadow: rgb(199, 173, 141);
 // リンクカラー
-$color-link: rgba(240, 158, 51, 0.904);
-// アクション時のカラー
-$color-action: rgb(255, 117, 140);
+$color-link: rgba(240, 158, 51, 0.9);
+// hover時のカラー
+$color-hover: rgba(255, 117, 140, 0.75);
+// active時のカラー
+$color-action: rgba(255, 49, 83, 0.97);
 
 
 
