--- a/app/assets/stylesheets/Object/Project/_module.scss
+++ b/app/assets/stylesheets/Object/Project/_module.scss
@@ -1,136 +1,46 @@
 @import "../../Setting/config";
+@import "../../Setting/function";
 @import "../Mixin/placeholder";
-
-// ==========================================
-// フォームのスタイル
-// ==========================================
-#material_name {
-  width: 50%;
-  padding: 0px 6px;
-}
-
-.form-control {
-  display: block;
-  width: 100%;
-  height: calc(1.5em + 0.75rem + 2px);
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: $color-font;
-  background-color: $color-back;
-  background-clip: padding-box;
-  border: 1px solid #ced4da;
-  border-radius: 0.25rem;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-
-  &:focus {
-    color: $color-action;
-    background-color: $color-back-lighten;
-    box-shadow: inset $ss-shadowset $color-back-darken,
-      inset $sss-lightset $color-back-lighten;
-    text-shadow: $s-shadowset $color-action,
-      $s-lightset $color-action;
-  }
-}
-
-// input {
-
-// }
-
-.molform-group {
-  @include flexcontainer(row, wrap);
-
-  .molinput-set {
-    @include flexcontainer(row);
-    margin: 1px;
-
-    .molecular_name {
-      width: 5rem;
-      padding: 0px 6px;
-    }
-  }
-}
+@import "../Mixin/newmorphism";
+@import "../Project/btn";
 
 // ==========================================
 // nav-tab
 // ==========================================
-.nav {
-  @include flexcontainer;
+.header__nav {
+  & .__ul {
+    & .__li {}
+  }
+}
+
+// main内のnavigation
+.main__nav {
+  @include flexcontainer(row, wrap);
   position: relative;
   //汎用的にrelative、子要素にposition設定するため
   // top: ●●●; //positionを利用するなら指定
-}
-
-.nav-tabs {
-  display: flex;
-  flex-direction: wrap;
   margin-left: 5px;
   border-bottom: none;
   // z-index: 30;
 
-  .nav-item {
+  & .__item {
     margin: 0 4px;
     padding: 0.5rem 0.5rem;
     border-radius: 5px 5px 0 0;
     border-bottom: 2px solid $color-back;
+    @include bump(sss);
+    @include depressed(sss);
 
-    .nav-link {
+    &:active {
+      @include depressed(sss);
+      @include active-text(s);
+    }
+
+    & .__link {
+      @extend .a;
       padding: 0.5rem 0.5rem;
       // height: 1.5rem;
     }
 
-    .active {
-      box-shadow: inset $ss-shadowset $color-back-darken,
-        inset $sss-lightset $color-back-lighten;
-      text-shadow: $s-shadowset $color-action,
-        $s-lightset $color-action;
-    }
-
-    // box-shadow: $s-shadowset rgba($color-back-darken),
-    //   $s-lightset $color-back-lighten
   }
 }
-
-// ==========================================
-// ボタン,リンクのスタイル
-// ==========================================
-.btn,
-a {
-  width: max-content;
-  // height: 2rem;
-  padding: 0.25rem 1rem;
-  color: $color-link;
-  background-color: rgba($color-back, 0.3);
-  border-radius: 5px;
-  // border: 0.5px solid rgba($color-back, 0.01);
-  // outline: 1px solid $color-back-darken;
-  text-decoration: none;
-  transition: all 0.25s ease-in-out;
-
-  @at-root a {
-    background-color: inherit;
-    padding: 0;
-    outline: none;
-  }
-
-  &:hover {
-    color: $color-action;
-    background: $color-back-lighten;
-    // box-shadow: inset 2px 2px 8px rgb(212, 154, 164),
-    //   inset -2px -2px 8px rgb(255, 198, 208);
-    text-shadow: $l-shadowset $color-action,
-      $l-lightset $color-action;
-  }
-
-  @at-root a:hover {
-    background-color: inherit;
-  }
-}
-
-// .cleardeco {//   border: none;
-//   /* 枠線を消す */
-//   outline: none;
-//   /* クリックした時の枠線を消す */
-//   user-select: none;
-// }
