add: プロジェクトで使うコンポーネントの機能をmixinで定義

--- a/app/assets/stylesheets/Object/Mixin/_newmorphism.scss
+++ b/app/assets/stylesheets/Object/Mixin/_newmorphism.scss
@@ -1,80 +1,35 @@
 @import "../../Setting/config";
+@import "../../Setting/function";
+@import "placeholder";
 
 // ==========================================
 // 平面でっぱり
-// ==========================================
-.sss-bump {
-  box-shadow: $sss-shadowset $color-back-darken,
-    $sss-lightset $color-back-lighten;
+@mixin bump($scale, $shadow-width: 0) {
+  box-shadow: shadowset($scale) $shadow-width $color-back-darken,
+    lightset($scale) $shadow-width $color-back-lighten;
 }
 
-.ss-bump {
-  box-shadow: $ss-shadowset $color-back-darken,
-    $ss-lightset $color-back-lighten;
-}
-
-.s-bump {
-  box-shadow: $s-shadowset $color-back-darken,
-    $s-lightset $color-back-lighten;
-}
-
-.m-bump {
-  box-shadow: $m-shadowset $color-back-darken,
-    $m-lightset $color-back-lighten;
-}
-
-.l-bump {
-  box-shadow: $l-shadowset 20px $color-back-darken,
-    $l-lightset 30px $color-back-lighten;
-}
+// .l-bump {
+//   box-shadow: shadowset(l) 20px $color-back-darken,
+//     lightset(l) 30px $color-back-lighten;
+// }
 
 // ==========================================
 // 平面凹み
-// ==========================================
-.sss-depressed {
-  box-shadow: inset $sss-shadowset $color-back-darken,
-    inset $sss-lightset $color-back-lighten;
-  // text-shadow: $s-shadowset $color-action,
-  //   $s-lightset $color-action;
-}
-
-.ss-depressed {
-  box-shadow: inset $ss-shadowset $color-back-darken,
-    inset $ss-lightset $color-back-lighten;
-  // text-shadow: $m-shadowset $color-action,
-  //   $m-lightset $color-action;
-}
-
-.s-depressed {
-  box-shadow: inset $s-shadowset $color-back-darken,
-    inset $s-lightset $color-back-lighten;
-  // text-shadow: $l-shadowset $color-action,
-  //   $l-lightset $color-action;
-}
-
-.m-depressed {
-  box-shadow: inset $m-shadowset $color-back-darken,
-    inset $m-lightset $color-back-lighten;
-  // text-shadow: $l-shadowset $color-action,
-  //   $l-lightset $color-action;
-}
-
-.l-depressed {
-  box-shadow: inset $l-shadowset $color-back-darken,
-    inset $l-lightset $color-back-lighten;
-  // text-shadow: $l-shadowset $color-action,
-  //   $l-lightset $color-action;
+@mixin depressed($scale) {
+  box-shadow: inset shadowset($scale) $color-back-darken,
+    inset lightset($scale) $color-back-lighten;
 }
 
 // ==========================================
 // 立体的なでっぱり
-// ==========================================
-.distinct {
+@mixin distinct($scale) {
   box-shadow:
-    inset $sss-lightset $color-back-darken,
-    inset $sss-shadowset $color-back-lighten,
-    $sss-4d-lightset $color-back-lighten,
-    $sss-shadowset $color-back-darken;
-  text-shadow: $ss-textshadowset $color-link,
-    $ss-textlightset $color-link;
+    inset lightset($scale) $color-back-darken,
+    inset shadowset($scale) $color-back-lighten,
+    lightset($scale, distinct) $color-back-lighten,
+    shadowset($scale, distinct) $color-back-darken;
+  // text-shadow: shadowset($scale, tex) $color-link,
+  //   lightset($scale, tex) $color-link;
+  @include link-text($scale);
 }
