--- a/app/assets/stylesheets/Object/Mixin/_placeholder.scss
+++ b/app/assets/stylesheets/Object/Mixin/_placeholder.scss
@@ -7,3 +7,60 @@
   display: flex;
   flex-flow: $direc $wrap;
 }
+
+@mixin table-frame($collapse, $spacing, $radius) {
+  border-collapse: $collapse;
+  border-spacing: $spacing;
+  border-radius: $radius;
+}
+
+@mixin link-text($scale) {
+  color: $color-link;
+  text-shadow: shadowset($scale, tex) rgba($color-link, 0.75),
+    lightset($scale, tex) rgba($color-link, 0.75);
+}
+
+@mixin hover-text($scale) {
+  color: $color-hover;
+  text-shadow: shadowset($scale, tex) $color-hover,
+    lightset($scale, tex) $color-hover;
+}
+
+@mixin active-text($scale) {
+  color: $color-action;
+  text-shadow: shadowset($scale, tex) $color-action,
+    lightset($scale, tex) $color-action;
+}
+
+// ==========================================
+// アニメーション
+// ==========================================
+// 文字の発光(初動)
+@mixin radiation-text($scale, $color) {
+  color: rgba($color, 0.95);
+  text-shadow: shadowset($scale, tex) rgba($color, 0.75),
+    lightset($scale, tex) rgba($color, 0.75);
+
+  @keyframes neonlit {
+    0% {
+      color: rgba($color, 0.95);
+      text-shadow: shadowset($scale, tex) rgba($color, 0.75),
+        lightset($scale, tex) rgba($color, 0.75);
+    }
+
+    100% {
+      color: rgba($color, 0.75);
+      text-shadow: shadowset($scale, tex) rgba($color, 0.5),
+        lightset($scale, tex) rgba($color, 0.5);
+    }
+  }
+
+  animation: neonlit 1.5s linear 500ms 4 alternate backwards;
+}
+
+// %cleardeco {//   border: none;
+//   /* 枠線を消す */
+//   outline: none;
+//   /* クリックした時の枠線を消す */
+//   user-select: none;
+// }
