--- a/app/assets/stylesheets/Foundation/_structure.scss
+++ b/app/assets/stylesheets/Foundation/_structure.scss
@@ -3,15 +3,19 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
 @import "../Layout/header", "../Layout/main", "../Layout/footer";
-@import "../Object/Mixin/newmorphism", "../Object/Mixin/table";
-@import "../Object/Project/module";
-@import "../Setting/config";
+@import "../Object/Mixin/newmorphism",
+"../Object/Mixin/placeholder",
+"../Object/Mixin/table",
+"../Object/Mixin/form",
+"../Object/Mixin/btn";
+@import "../Object/Project/module",
+"../Object/Project/table",
+"../Object/Project/form",
+"../Object/Project/btn";
+@import "../Setting/config", "../Setting/function";
 
 // htmlの構造順に記述、装飾的な内容はパーシャルファイルで
 html {
-  position: relative;
-  height: 100%;
-
   // テキスト系
   color: $color-font;
 
@@ -21,7 +25,6 @@ html {
   }
 
   background: {
-    // color: call($name: , $args: …);
     color: rgb(31, 34, 27);
     image: url("/images/glaze_fav背景.png");
     attachment: fixed;
@@ -31,48 +34,31 @@ html {
 
   body {
     // レイアウト系
-    display: flex;
-    flex-direction: column;
+    @include flexcontainer(column);
     position: relative;
     width: 100vw;
     height: 100%;
     background-color: $color-back;
 
-    // 背景の層を作る
-    // .bg-layer {//   position: relative;
-    //   flex: 1;
-    //   width: 100%;
-    // height: 100%;
-    // background-color: $color-back;
-
     header {
-      display: flex;
-      flex-direction: row;
+      @include flexcontainer(row);
       width: 100%;
       height: $header-height;
     }
 
     // =============================================
     main {
-      // height: 100%;
-      display: flex;
-      flex-direction: column;
+      @include flexcontainer(column);
       flex: 1;
       position: relative;
-      // padding: 2rem;
-      // margin-bottom: 2rem;
-      margin: 2rem;
-      margin-top: 1rem;
-      margin-bottom: $footer-height;
-
-      //       flex: 1;
+      // height: 100%;
       // min-height: 50vh;
+      // padding: 2rem;
+      margin: 1rem 2rem;
     }
 
     // =============================================
     footer {
-      position: fixed;
-      bottom: 0;
       width: 100%;
       height: $footer-height;
       background-color: rgba(31, 34, 27, 0.9);
@@ -83,7 +69,5 @@ html {
       // position: absolute; // left: 10px;
       // bottom: 0px;
     }
-
-    // }
   }
 }
