fix: mainの上部をコメント化 - ページタイトルはコントローラで

--- a/app/views/glaze_fav/about.html.slim
+++ b/app/views/glaze_fav/about.html.slim
@@ -1,2 +1,10 @@
-h1 GlazeFavとは
-p Find me in app/views/glaze_fav/about.html.slim
+/ ================================================
+/ /about  glaze_fav_about
+/ アプリの説明
+/ ================================================
+
+p 予め代表的な原料の成分は表で用意してある
+p 予め代表的な原料の成分は表で用意してある
+p 予め代表的な原料の成分は表で用意してある
+p 予め代表的な原料の成分は表で用意してある
+p 予め代表的な原料の成分は表で用意してある
