--- a/app/views/glaze_fav/top.html.slim
+++ b/app/views/glaze_fav/top.html.slim
@@ -1,1 +1,5 @@
-h1 トップ画面
+/ ================================================
+/ / (rootの画面・top画面)
+/ ================================================
+
+p 釉薬の原料計算をもとにあなたの求める釉調を表現してみましょう
