--- a/app/assets/stylesheets/Object/Project/_form.scss
+++ b/app/assets/stylesheets/Object/Project/_form.scss
@@ -6,46 +6,48 @@
 // ==========================================
 // フォームのスタイル
 // ==========================================
+.form__label {
+  @include radiation-text(sss, $color-font);
+}
+
 #material_name {
   width: 50%;
+  min-width: 10rem;
   padding: 0px 6px;
 }
 
-.form-control {
+.form__control {
+  @extend %cleardeco;
+  @include depressed(sss);
   display: block;
   width: 100%;
   height: calc(1.5em + 0.75rem + 2px);
   padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+  // font-size: 1rem;
   font-weight: 400;
-  line-height: 1.5;
+  // line-height: 1.5;
   color: $color-font;
   background-color: $color-back;
   background-clip: padding-box;
-  border: 1px solid #ced4da;
+  // border: 1px solid #ced4da;
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 
   &:focus {
-    color: $color-action;
-    background-color: $color-back-lighten;
-    box-shadow: inset shadowset(ss) $color-back-darken,
-      inset lightset(sss) $color-back-lighten;
-    text-shadow: shadowset(s, tex) $color-action,
-      lightset(s, tex) $color-action;
+    @include hover-text(s);
+    // color: $color-hover;
+    @include bump-depressed(ss);
+    // text-shadow: shadowset(s, tex) $color-action,
+    //   lightset(s, tex) $color-action;
   }
 }
-
-// input {
-
-// }
 
 .molform-group {
   @include flexcontainer(row, wrap);
 
   .molinput-set {
-    @include flexcontainer(row);
-    margin: 1px;
+    @include flexcontainer(column);
+    margin: 1rem;
 
     .molecular_name {
       width: 5rem;
